--- a/popcorn-time/src/index.css
+++ b/popcorn-time/src/index.css
@@ -1,5 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
+:root {
+  --color-primary: #6741d9;
+  --color-primary-light: #7950f2;
+  --color-text: #dee2e6;
+  --color-text-dark: #adb5bd;
+  --color-background-100: #343a40;
+  --color-background-500: #2b3035;
+  --color-background-900: #212529;
+  --color-red: #fa5252;
+  --color-red-dark: #e03131;
+}
+
 *,
 *::before,
 *::after {
@@ -15,7 +27,8 @@ html {
 body {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
-  background-color: #f7f2e9;
+  /* background-color: #f7f2e9; */
+  background-color: #0f0e0e;
   box-sizing: border-box;
 }
 
@@ -48,13 +61,51 @@ body {
   padding: 0.3rem;
 }
 
-.App__grid-box {
+/* .App__grid-box {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   padding: 0 3.2rem;
-}
+} */
 
 .App__num-results {
   justify-self: end;
+}
+
+.main {
+  margin-top: 2.4rem;
+  height: calc(100vh - 7.2rem - 3 * 2.4rem);
+  display: flex;
+  gap: 2.4rem;
+  justify-content: center;
+}
+
+.main__box {
+  width: 50rem;
+  background-color: #2b3035;
+  border-radius: 0.9rem;
+  overflow: scroll;
+  position: relative;
+}
+
+.main__btn--toggle {
+  position: absolute;
+  top: 0.8rem;
+  right: 0.8rem;
+  height: 2.4rem;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  border: none;
+  background-color: var(--color-background-900);
+  color: var(--color-text);
+  font-size: 1.4rem;
+  font-weight: bold;
+  cursor: pointer;
+  z-index: 999;
+}
+
+.main__list {
+  list-style: none;
+  padding: 0.8rem 0;
+  overflow: scroll;
 }
